
* Python 3.1 and 3.2 have an inconsistent memoryview implementation which
  required a workaround for NUL byte detection. (Robert Collins, #1216246)

* The test suite was failing 6 tests due to testtools changing it's output
  formatting of exceptions. (Robert Collins)

* V2 parser errors now set appropriate mime types for the encapsulated packet
  data and the error message. (Robert Collins)

IMPROVEMENTS
~~~~~~~~~~~~

* Most filters will now accept a file path argument instead of only reading
  from stdin. (Robert Collins, #409206)

0.0.15
------

BUG FIXES
~~~~~~~~~

* Clients of subunit did not expect memoryview objects in StreamResult events.
  (Robert Collins)

* Memoryview and struct were mutually incompatible in 2.7.3 and 3.2.
  (Robert Collins, #1216163)

0.0.14
------

BUG FIXES
~~~~~~~~~

* Memoryview detection was broken and thus it's use was never really tested.
  (Robert Collins, 1216101)

* TestProtocol2's tag tests were set sort order dependent.
  (Robert Collins, #1025392)

* TestTestProtocols' test_tags_both was set sort order dependent.
  (Robert Collins, #1025392)

* TestTestProtocols' test_*_details were dictionary sort order dependent.
  (Robert Collins, #1025392)

* TestSubUnitTags's test_add_tag was also se sort order dependent.
  (Robert Collins, #1025392)

0.0.13
------

IMPROVEMENTS
~~~~~~~~~~~~

* subunit should now build with automake 1.11 again. (Robert Collins)

* `subunit-stats` no longer outputs encapsulated stdout as subunit.
  (Robert Collins, #1171987)

* The logic for `subunit.run` is now importable via python -
  `subunit.run.main`. (Robert Collins, #606770)

BUG FIXES
~~~~~~~~~

* Removed GPL files that were (C) non Subunit Developers - they are
  incompatible for binary distribution, which affects redistributors.
  (Robert Collins, #1185591)

0.0.12
------

BUG FIXES
~~~~~~~~~

* Subunit v2 packets with both file content and route code were not being